--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-body { background-color: lightblue; }
-h1 { color: blue; }
-h2 { color: green; }
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    color: blue;
+}
+
+h2 {
+    color: green;
+}
